--- a/1.2 CSS/Proj2_Carousel_Kevin_Powell/style.css
+++ b/1.2 CSS/Proj2_Carousel_Kevin_Powell/style.css
@@ -3,8 +3,8 @@
 
 .carousel {
     position: relative;
-    height: 800px;
-    width: 600px;
+    height: 600px;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -62,7 +62,7 @@
 }
 
 .carousel__button--left {
-    left: -40px;        /*!!!!! */
+    left: -80px;        /*!!!!! */
 }
 
 .carousel__button--right {
